# SMB_SAAS

./: AIGuidelines.md  README.md  SMB_Automation_Modular_SaaS_Blueprint.md  TODO.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: ping.py
backend/app/core/: config.py  tenancy.py
backend/app/db/: base_class.py  session.py
backend/app/models/: tenant.py
backend/app/schemas/: tenant.py
tests/: test_config.py  test_tenant_context.py
