[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smb-saas"
version = "0.1.0"
description = "Modular multi-tenant automation SaaS for SMBs"
readme = "README.md"
authors = [{name = "Automation Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
pythonpath = ["backend"]
